// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table cell matches snapshot array long 1`] = `
<span
  class="table-cell truncated"
>
  [0, 1, 2, 3, 4, 5, 6, 7
  <span
    class="omitted"
  >
    ...357 omitted...
  </span>
  7, 98, 99]
  <span
    class="bp3-icon bp3-icon-more action-icon"
    icon="more"
  >
    <svg
      data-icon="more"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <desc>
        more
      </desc>
      <path
        d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</span>
`;

exports[`table cell matches snapshot array short 1`] = `
<span
  class="table-cell plain"
>
  [a, b, c]
</span>
`;

exports[`table cell matches snapshot null 1`] = `
<span
  class="table-cell null"
>
  null
</span>
`;

exports[`table cell matches snapshot null timestamp 1`] = `
<span
  class="table-cell unparseable"
>
  unparseable timestamp
</span>
`;

exports[`table cell matches snapshot simple 1`] = `
<span
  class="table-cell plain"
>
  Hello World
</span>
`;

exports[`table cell matches snapshot truncate 1`] = `
<span
  class="table-cell truncated"
>
  testtesttesttesttesttes
  <span
    class="omitted"
  >
    ...363 omitted...
  </span>
  sttesttest
  <span
    class="bp3-icon bp3-icon-more action-icon"
    icon="more"
  >
    <svg
      data-icon="more"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <desc>
        more
      </desc>
      <path
        d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</span>
`;
